syntax = "proto3";

package ping;

option php_namespace = "Ping";
option php_metadata_namespace = "GPBMetadata\\Ping";

service PingService {
  rpc Ping (PingRequest) returns (PingReply);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}